query fixed + additional json converters