@@ -3,20 +3,21 @@ package io.daobab.converter.json.type;
 import io.daobab.converter.json.JsonConverter;
 import io.daobab.error.DaobabException;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
-public class JsonUrlConverter extends JsonConverter<URL> {
+public class JsonUriConverter extends JsonConverter<URI> {
+
     @Override
-    public void toJson(StringBuilder sb, URL obj) {
+    public void toJson(StringBuilder sb, URI obj) {
         sb.append(QUOTE).append(obj).append(QUOTE);
     }
 
     @Override
-    public URL fromJson(String json) {
+    public URI fromJson(String json) {
         try {
-            return new URL(json);
-        } catch (MalformedURLException e) {
+            return new URI(json);
+        } catch (URISyntaxException e) {
             throw new DaobabException("Problem during Json conversion", e);
         }
     }
